# guillotina_localstorage

./: .travis.yml  README.md  pyproject.toml  setup.cfg
guillotina_localstorage/: __init__.py  adapters.py  interfaces.py  storage.py  utils.py
guillotina_localstorage/tests/: conftest.py  fixtures.py  test_storage.py
