[tool.poetry]
name = "guillotina_localstorage"
version = "0.2.0"
description = "Local FS storage support for Guillotina"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Jordi Masip <jordi@masip.cat>"]

[tool.poetry.dependencies]
python = "^3.7"
guillotina = ">5.3.48"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
aiohttp = "^3.6.2"
async-asgi-testclient = "^1.4.4"
pytest = "^6.0.0"
pytest-asyncio = "^0.14.0"
pytest-docker-fixtures = "^1.3.9"
pylint = "^2.6.0"
isort = "^5.5.2"
black = "^20.8b1"
flake8 = "^3.8.3"
pytest-cov = "^2.10.1"

[tool.isort]
force_single_line = "True"
sections = ["THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "STDLIB"]
no_lines_before = ["LOCALFOLDER", "THIRDPARTY", "FIRSTPARTY", "STDLIB"]
force_alphabetical_sort = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
